--- a/cs.cfg
+++ b/cs.cfg
@@ -4,7 +4,7 @@ alias cs_pyro       "joinclass pyro"
 alias cs_demoman    "joinclass demoman"
 alias cs_heavy      "joinclass heavyweapons"
 alias cs_engineer   "joinclass engineer"
-alias cs_medic      "joinclass medic"
+alias cs_medic      "load_itempreset 0"
 alias cs_sniper     "joinclass sniper"
 alias cs_spy        "joinclass spy"
 
