--- a/cs_set_enable.cfg
+++ b/cs_set_enable.cfg
@@ -4,6 +4,6 @@ alias cs_set_pyro       "alias cs_other cs_scout; alias cs_current cs_pyro"
 alias cs_set_demoman    "alias cs_other cs_scout; alias cs_current cs_demoman"
 alias cs_set_heavy      "alias cs_other cs_scout; alias cs_current cs_heavy"
 alias cs_set_engineer   "alias cs_other cs_scout; alias cs_current cs_engineer"
-alias cs_set_medic      "alias cs_other cs_scout; alias cs_current cs_medic"
+alias cs_set_medic      "alias cs_other cs_medic; alias cs_current cs_medic"
 alias cs_set_sniper     "alias cs_other cs_scout; alias cs_current cs_sniper"
 alias cs_set_spy        "alias cs_other cs_scout; alias cs_current cs_spy"
