--- a/cs.cfg
+++ b/cs.cfg
@@ -1,12 +1,49 @@
-alias cs_scout      "joinclass scout"
-alias cs_soldier    "joinclass soldier"
-alias cs_pyro       "joinclass pyro"
-alias cs_demoman    "joinclass demoman"
-alias cs_heavy      "joinclass heavyweapons"
-alias cs_engineer   "joinclass engineer"
-alias cs_medic      "load_itempreset 0"
-alias cs_sniper     "joinclass sniper"
-alias cs_spy        "joinclass spy"
+alias cs.noop                   ""
 
-alias +cs_respawn "exec cs_set_disable; cs_other"
-alias -cs_respawn "exec cs_set_enable; cs_current"
+alias cs.held                   "cs.held.failure; cs.current.disable; cs.class.random"
+alias cs.held.success           "alias cs.success cs.noop; alias -cs.respawn cs.released"
+alias cs.held.failure           "alias cs.success cs.held.success; alias -cs.respawn cs.noop"
+
+alias cs.released               "cs.released.failure; cs.current.enable; cs.current"
+alias cs.released.success       "alias cs.success cs.noop; alias +cs.respawn cs.held"
+alias cs.released.failure       "alias cs.success cs.released.success; alias +cs.respawn cs.released.recover"
+alias cs.released.recover       "alias +cs.respawn cs.held; alias -cs.respawn cs.noop; cs.current"
+
+alias cs.success                "cs.noop"
+
+alias cs.current                "cs.noop"
+
+alias cs.current.enable         "alias cs.current.1 cs.current.1.inner; alias cs.current.2 cs.current.2.inner; alias cs.current.3 cs.current.3.inner; alias cs.current.4 cs.current.4.inner; alias cs.current.5 cs.current.5.inner; alias cs.current.6 cs.current.6.inner; alias cs.current.7 cs.current.7.inner; alias cs.current.8 cs.current.8.inner; alias cs.current.9 cs.current.9.inner"
+alias cs.current.disable        "alias cs.current.1 cs.noop; alias cs.current.2 cs.noop; alias cs.current.3 cs.noop; alias cs.current.4 cs.noop; alias cs.current.5 cs.noop; alias cs.current.6 cs.noop; alias cs.current.7 cs.noop; alias cs.current.8 cs.noop; alias cs.current.9 cs.noop"
+
+alias cs.current.1.inner        "alias cs.current cs.class.1"
+alias cs.current.2.inner        "alias cs.current cs.class.2"
+alias cs.current.3.inner        "alias cs.current cs.class.3"
+alias cs.current.4.inner        "alias cs.current cs.class.4"
+alias cs.current.5.inner        "alias cs.current cs.class.5"
+alias cs.current.6.inner        "alias cs.current cs.class.6"
+alias cs.current.7.inner        "alias cs.current cs.class.7"
+alias cs.current.8.inner        "alias cs.current cs.class.8"
+alias cs.current.9.inner        "alias cs.current cs.class.9"
+
+alias cs.class.1                "joinclass scout"
+alias cs.class.2                "joinclass soldier"
+alias cs.class.3                "joinclass pyro"
+alias cs.class.4                "joinclass demoman"
+alias cs.class.5                "joinclass heavyweapons"
+alias cs.class.6                "joinclass engineer"
+alias cs.class.7                "joinclass medic"
+alias cs.class.8                "joinclass sniper"
+alias cs.class.9                "joinclass spy"
+alias cs.class.random           "joinclass random"
+
+alias +cs.respawn               "cs.held"
+alias cs.scout                  "cs.success; cs.current.1"
+alias cs.soldier                "cs.success; cs.current.2"
+alias cs.pyro                   "cs.success; cs.current.3"
+alias cs.demoman                "cs.success; cs.current.4"
+alias cs.heavyweapons           "cs.success; cs.current.5"
+alias cs.engineer               "cs.success; cs.current.6"
+alias cs.medic                  "cs.success; cs.current.7"
+alias cs.sniper                 "cs.success; cs.current.8"
+alias cs.spy                    "cs.success; cs.current.9"
