--- a/orb.cfg
+++ b/orb.cfg
@@ -51,3 +51,5 @@ alias orb.engineer              "orb.success; orb.6"
 alias orb.medic                 "orb.success; orb.7"
 alias orb.sniper                "orb.success; orb.8"
 alias orb.spy                   "orb.success; orb.9"
+
+orb.current.thaw
