--- a/optimal-respawn-bind/cfg/orb.cfg
+++ b/optimal-respawn-bind/cfg/orb.cfg
@@ -5,7 +5,7 @@ alias orb.current  "orb.noop"
 alias orb.success  "orb.noop"
 
 /// State Machine
-alias orb.held         "echo orb.held;         orb.held.failure;                   orb.current.freeze;             orb.class.random"
+alias orb.held         "echo orb.held;         orb.held.failure;                   orb.current.freeze;             orb.class.random; load_itempreset 0"
 alias orb.held.success "echo orb.held.success; alias orb.success orb.noop;         alias -orb.respawn orb.released"
 alias orb.held.failure "echo orb.held.failure; alias orb.success orb.held.success; alias -orb.respawn orb.noop"
 alias orb.held.medic   "echo orb.held.medic;   alias -orb.respawn orb.noop;        load_itempreset 0"
