--- a/ldesgoui/cfg/binds.cfg
+++ b/ldesgoui/cfg/binds.cfg
@@ -28,14 +28,16 @@ bind ' say_team
 bind z voice_menu_1
 bind x voice_menu_2
 bind c voice_menu_3
+bind p taunt
 
+bind , changeclass
+bind . changeteam
+bind ` toggleconsole
 bind alt changeclass
+bind escape cancelselect
 bind mouse4 "load_itempreset 0"
 bind mouse4 +orb.respawn
+bind o extendfreeze
 bind tab +showscores
-bind escape cancelselect
 bind v +quickswitch
-bind ` toggleconsole
-bind . changeteam
-bind , changeclass
 bindtoggle f r_drawviewmodel
