fix orb for new mastercomfig, update split kb bindfs

--- a/ldesgoui/cfg/user/autoexec.cfg
+++ b/ldesgoui/cfg/user/autoexec.cfg
@@ -6,6 +6,8 @@ con_enable 1
 con_filter_enable 1
 con_filter_text_out "Error"
 
+snd_mixahead .022
+
 fov_desired 90
 viewmodel_fov 90
 viewmodel_fov_demo 90
