--- a/ldesgoui/cfg/user/binds.cfg
+++ b/ldesgoui/cfg/user/binds.cfg
@@ -12,6 +12,10 @@ bind shift +duck
 bind mouse1 +attack
 bind mouse2 +attack2
 
+bind q slot1
+bind e slot2
+bind r slot3
+
 bind 1 slot1
 bind 2 slot2
 bind 3 slot3
@@ -33,11 +37,11 @@ bind p taunt
 bind , changeclass
 bind . changeteam
 bind ` toggleconsole
-bind alt changeclass
+bind b changeclass
 bind escape cancelselect
-bind mouse4 "load_itempreset 0"
-bind mouse4 +orb.respawn
+bind mouse5 +orb.respawn
 bind o extendfreeze
-bind tab +showscores
+bind ctrl +showscores
 bind v +quickswitch
 bindtoggle f r_drawviewmodel
+bind t +use_action_slot_item
