--- a/ldesgoui/cfg/user/binds.cfg
+++ b/ldesgoui/cfg/user/binds.cfg
@@ -39,7 +39,7 @@ bind . changeteam
 bind ` toggleconsole
 bind b changeclass
 bind escape cancelselect
-bind mouse5 +orb.respawn
+bind g +orb.respawn
 bind o extendfreeze
 bind ctrl +showscores
 bind v +quickswitch
